<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="80sp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="40">


        <Button
            android:id="@+id/catsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#1C003C"
            android:text="@string/cats"
            android:textColor="#FFFFFF"
            android:textSize="13sp" />

        <Button
            android:id="@+id/roomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#320060"
            android:text="@string/rooms"
            android:textColor="#D8DAFF"
            android:textSize="13sp" />

        <Button
            android:id="@+id/timeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="#470187"
            android:text="@string/time_caps"
            android:textColor="#C7CAFD"
            android:textSize="13sp" />

        <Button
            android:id="@+id/strategyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="#5802A6"
            android:text="@string/strategy_caps"
            android:textColor="#B5B9FB"
            android:textSize="11sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/mathsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="#6701C3"
            android:text="@string/maths_caps"
            android:textColor="#A7ACFD"
            android:textSize="13sp" />

        <Button
            android:id="@+id/creditsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="#7403DA"
            android:text="@string/credits"
            android:textColor="#A7ACFD"
            android:textSize="13sp" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="#941EFF"
            android:onClick="goBack"
            android:text="@string/back"
            android:textColor="#A7ACFD"
            android:textSize="13sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="681dp"
            android:layout_height="488dp"
            android:contentDescription="TODO"
            android:scaleType="fitCenter"
            android:src="@drawable/space" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginTop="45sp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15sp"
                        android:layout_marginLeft="15sp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/item_cat">

                    </androidx.recyclerview.widget.RecyclerView>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/sortAttack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#673AB7"
                            android:text="@string/sortAttack"
                            android:textSize="10sp"
                            tools:ignore="ButtonStyle,SmallSp" />

                        <Button
                            android:id="@+id/sortDelay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#7451B1"
                            android:text="@string/sortDelay"
                            android:textSize="10sp"
                            tools:ignore="ButtonStyle,SmallSp" />

                        <Button
                            android:id="@+id/sortPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#8261BC"
                            android:text="@string/sortPrice"
                            android:textSize="10sp"
                            tools:ignore="ButtonStyle,SmallSp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <ImageView
                        android:id="@+id/imageDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15sp"
                        android:layout_marginLeft="15sp"
                        android:contentDescription="TODO" />



                </androidx.appcompat.widget.LinearLayoutCompat>

            </ScrollView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </FrameLayout>


</LinearLayout>